:bug: fixed z-index of user profile

--- a/src/styles/_component.browse.scss
+++ b/src/styles/_component.browse.scss
@@ -147,7 +147,7 @@ iframe {
 	&--open {
 		display: block;
 		top: 0;
-		z-index: 99;
+		z-index: 1000;
 		height: 100%;
 		overflow-y: scroll !important;
 	}
